# Rhine

./: .gitignore  CMakeLists.txt
App/: main.cpp
Decoder/: CpuDecoder.cpp  CpuDecoder.hpp  IDecoder.hpp  VulkanDecoder.cpp  VulkanDecoder.hpp
Demuxer/: Demuxer.cpp  Demuxer.hpp
Docs/: VulkanRendererDesign.md  mpv-decoder.md  mpv-demux.md
Player/: FrameQueue.hpp  PlayerController.cpp  PlayerController.h  PlayerController.hpp  decoder.cpp  decoder.h  framequeue.h
Render/: IRenderer.hpp  renderer.cpp  renderer.h  renderer.hpp
Render/Vulkan/: VulkanContext.cpp  VulkanContext.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  libav_impl.c
UI/: Main.qml  VulkanDisplay.cpp  VulkanDisplay.hpp  videodisplay.cpp  videodisplay.h
Utils/: Logger.cpp  Logger.hpp
